# Gho

./: .cursorrules  .gitignore  AGENTS.md  AUDYT_PIPELINE_GATEKEEPER_V2.md  AUDYT_PIPELINE_GRPC_SHADOW_LEDGER_2026-03-12.md  COVERAGE.md  Cargo.toml  EXECUTIVE_AUDIT_GATEKEEPER_V2.md  INVESTIGATION_REPORT_LOSING_POOLS.md  JEBAC.md  LEGACY_SCORING.md  NOWE_METRYKI_DO_WDROZENIA.md  OPIS.md  PARSER_ULEPSZENIA.md  POLECENIA_SKROT.md  POOL_FILTERING_STRATEGY_IMPLEMENTATION.md  POST_BUY_LOGIC.md  RC1_RC2_RC3_REPAIR_SUMMARY.md  README.md  STRATEGY_IMPLEMENTATION_READY.txt  SURVIVAL_FILTER_IMPLEMENTATION.md  SYBIL_INVERSION_ANALYSIS.md  V25_SHADOW_BURNIN_MONITORING_REPORT.md  V3.md  analiza_porownawcza.py  analyze_multiple_logs.py  avg_tx_evaluated.py  compare_config_vs_log.py  compare_first_vs_current.py  config.toml  cov.py  d  decision.md  extract_correct_log.py  extract_log_thresholds.py  get_failures.sh  newproviderr.md  pool_threshold_analysis.py
ghost-brain/: CALIBRATION_README.md  CONFIG_REFERENCE.md  Cargo.toml  GHOST_BRAIN_CONFIG.md  HYPER_PREDICTION_CONFIG_MIGRATION.md  README.md  cargo_errors.txt  ghost_brain_config.example.json  ghost_brain_config.example.toml  ghost_brain_config.toml  ghost_brain_config.toml.bak_20260328T145901Z
ghost-brain/benches/: amm_math_bench.rs  cabal_bench.rs  fast_pipeline_bench.rs  oracle_bench.rs  pumpfun_cache_bench.rs  qedd_mci_bench.rs  scoring_benchmarks.rs
ghost-brain/configs/: live_backend_draft.rs
ghost-brain/docs/: ANOMALY_DETECTION.md  COMPONENT_STATUS_MATRIX.md  CONFIDENCE_MODEL.md  CONFIDENCE_MODEL_IMPLEMENTATION.md  E2E_TEST_RUNNER.md  EXPERT_ANALYSIS_REPORT.md  FRB_INTEGRATION.md  GHOST BRAIN CONFIG MANUAL.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_CONFIG.md  INTEGRATION_GUIDE.md  IWIM_IMPLEMENTATION_GUIDE.md  IWIM_IMPLEMENTATION_STATUS.md  IWIM_TEST_CORPUS.md  JITO_BUNDLE_IMPLEMENTATION.md  LEADER_PREDICTOR.md  LEADER_PREDICTOR_INTEGRATION.md  MPCF_TEST_CORPUS.md  ORACLE_DECISION_LOGGING.md  REFACTORING_STATUS.md  REPLAY_EQUIVALENCE_PROOF.md  SUB_ISSUE_6_COMPLETION_SUMMARY.md  TELEMETRY_FULL_JSONL.md  WEIGHT_TUNING.md
ghost-brain/examples/: chaos_demo.rs  confidence_model_demo.rs  config_usage.rs  frb_complete_pipeline.rs  guardian_demo.rs  hyper_prediction_telemetry_demo.rs  hysteresis_loop_demo.rs  oracle_decision_dry_run.rs  qedd_mci_integration.rs  qman_part3_signals.rs  qman_prediction.rs  resonance_detector_demo.rs  task_2_3_verification.rs  telemetry_demo.rs  whf_field_analysis.rs  whf_flowfield.rs  whf_launcher_api.rs
ghost-brain/proptest-regressions/: ghost_brain_config.toml
ghost-brain/scripts/: ci_stability_matrix.sh  generate_replay_fixtures.sh  run_replay_equivalence_v2.sh
ghost-brain/src/: fast_pipeline.rs  jito_bundle.rs  leader_predictor.rs  lib.rs  ligma_tests.rs  main.rs  mci.rs  metrics_server.rs  qedd.rs  strategy.rs
ghost-brain/tests/: bus_metrics_integration.rs  config_wiring_test.rs  critical_false_negative_fixes.rs  cyclic_predictor_tests.rs  death_protocol_tests.rs  e2e_raw_bytes_pipeline.rs  e2e_scoring_tests.rs  enhanced_candidate_integration.rs  execution_contract_audit_tests.rs  flowfield_integration.rs  frb_integration.rs  frb_resonance_integration.rs  frb_stress_test.rs  gene_mapper_integration.rs  ghost_brain_config_load_test.rs  hysteresis_loop_historical_replay.rs  hysteresis_loop_integration.rs  jito_bundle_integration.rs  leader_predictor_integration.rs  mci_initial_state.rs  mci_property_tests.rs  mci_smoke.rs  mock_pump_amm.rs  oracle_decision_logger_integration.rs  performance_tests.rs  pipeline_jito_integration.rs  pipeline_leader_predictor_integration.rs  pumpfun_state_cache.rs  qedd_mci_performance.rs  qedd_smoke.rs  qman_integration.rs  qman_part3_integration.rs  revolver_e2e_tests.rs  rpc_latency_probe.rs  runtime_strategy_tests.rs  scoring_config_test.rs  scoring_tunability_demo.rs  signal_collector_integration.rs  snapshot_diagnostics.rs  snapshot_engine_data_reliability.rs  (+7 more)
ghost-core/: Cargo.toml
ghost-core/src/: context_analysis.rs  coverage_audit.rs  enhanced_builder.rs  enhanced_candidate.rs  errors.rs  event_semantics.rs  event_time.rs  execution_account_evidence.rs  health.rs  init_pool_parser.rs  lib.rs  market_state.rs  pipeline_coverage.rs  pool_identity.rs  swap_plan.rs  trading_constraints.rs  transaction_parser.rs  validation.rs  wal.rs
ghost-core/tests/: account_state_core_tests.rs  checkpoint_engine_tests.rs  coordination_evidence_pr2.rs  coordination_metrics_phase06.rs  coordination_samples_pr1.rs  coordination_stats_pr3.rs  execution_account_evidence_tests.rs  feature_builder_tests.rs  pr1_contracts_foundations.rs  refactor_invariants_tests.rs  test_slot_zero_d2.rs
ghost-launcher/: Cargo.toml  RACE_CONDITION_FIX.md  README.md  WINDOWS_BUILD.md
ghost-launcher/examples/: binary_parserhuj.rs  capital_preservation_demo.rs  oracle_pipeline_diagnostic.rs  oracle_validation_comprehensive.rs  shadow_ledger_seed_publishing.rs
ghost-launcher/src/: config.rs  events.rs  lib.rs  logging.rs  main.rs  oracle_metrics.rs  oracle_runtime.rs  wal_recovery.rs
ghost-launcher/tests/: event_bus_subscription_order.rs  full_pipeline_integration.rs  gatekeeper_events_emission_test.rs  gatekeeper_pdd_tests.rs  gatekeeper_policy_tests.rs  gatekeeper_tas_tests.rs  gatekeeper_v25_regression.rs  gatekeeper_v2_pipeline_integration.rs  gatekeeper_v3_tests.rs  genesis_repro_check.rs  log_separation_test.rs  oracle_continuous_sampling.rs  oracle_event_bus_integration.rs  oracle_logging_demo.rs  oracle_transaction_gathering.rs  post_buy_runtime_integration.rs  refactor_invariants_tests.rs  seer_connection_mode_test.rs  seer_shadow_ledger_bridge_tests.rs  session_lifecycle_tests.rs  snapshot_engine_integration.rs  time_contract_bridge.rs  tx_intelligence_tests.rs  wal_startup_recovery.rs
gui-backend/: Cargo.toml  ghost-gui.service  install_service.sh
gui-backend/examples/: portfolio_tracker.rs  simple_server.rs  test_server.rs
gui-backend/src/: api.rs  config.rs  lib.rs  main.rs  portfolio.rs  portfolio_bridge.rs  price_oracle.rs  process_control.rs  server.rs  (+4 more)
(+1382 files in other folders)
