[package]
name = "ghost-core"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.18"
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1.13", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
bincode = "1.3"
sha2 = "0.10"
tracing = "0.1"
bytemuck = { version = "1.14", features = ["derive"] }
dashmap = "5.5"
metrics = "0.21"

[dev-dependencies]
proptest = "1.4"
serde_json = "1.0"
tempfile = "3.8"

[lib]
name = "ghost_core"
path = "src/lib.rs"
