[package]
name = "ghost-launcher"
version = "0.1.0"
edition = "2021"
description = "Integrated standalone launcher for Ghost components"

[lib]
name = "ghost_launcher"
path = "src/lib.rs"

[[bin]]
name = "ghost-launcher"
path = "src/main.rs"

[features]
default = []
manual-debug-examples = []

[[example]]
name = "binary_parserhuj"
path = "examples/binary_parserhuj.rs"
required-features = ["manual-debug-examples"]

[[example]]
name = "HUJ"
path = "examples/HUJ.rs"
required-features = ["manual-debug-examples"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
chrono = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"

# Synchronization primitives
parking_lot = "0.12"
dashmap = "5.5"

# Signal handling for graceful shutdown
tokio-util = "0.7"

# Internal dependencies
seer = { path = "../off-chain/components/seer" }
trigger = { path = "../off-chain/components/trigger" }
gui-backend = { path = "../gui-backend" }
ghost-core = { path = "../ghost-core" }
ghost-brain = { path = "../ghost-brain" }
jito-sdk-rust = "0.3"
yellowstone-grpc-client = "1.14"
yellowstone-grpc-proto = "1.14"
futures = "0.3"

# Solana SDK for monitoring
solana-sdk = "1.18"
solana-client = "1.18"
solana-account-decoder = "1.18"
solana-transaction-status = "1.18"
spl-associated-token-account = "2.3.0"
spl-token-2022 = "1.0.0"

# Encoding
base64 = "0.21"
bs58 = "0.5"
blake3 = "1.5"
bincode = "1.3"

# Metrics
prometheus = "0.13"
once_cell = "1.19"
metrics = "0.21"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.8"
tokio-stream = { version = "0.1", features = ["net"] }
