[package]
name = "ghost-collector"
version = "0.1.0"
edition = "2021"

[features]
default = []
dry_run = []

[dependencies]
tokio = { version = "1.0", features = ["fs", "sync", "macros", "rt", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
