[package]
name = "trigger"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Solana SDK
solana-sdk = "1.18"
solana-client = "1.18"
solana-rpc-client = "1.18"
solana-connection-cache = "1.18"
solana-transaction-status = "1.18"
spl-associated-token-account = "2.3.0"

# QUIC networking
quinn = "0.10"
rustls = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
prometheus = "0.13"

# Jito integration
jito-sdk-rust = "0.3.2"
reqwest = { version = "0.11", features = ["json"] }
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
prost = "0.12"
prost-types = "0.12"
base64 = "0.21"
rand = "0.8"

# Caching
lru = "0.12"

# Async utilities
futures = "0.3"

# Base58 encoding for keypair loading
bs58 = "0.5"

# Cryptography (for discriminator verification)
sha2 = "0.10"

# Internal dependencies
ghost-core = { path = "../../../ghost-core" }

[build-dependencies]
tonic-build = "0.10"

[lib]
name = "trigger"
path = "src/lib.rs"

[[bin]]
name = "trigger"
path = "src/main.rs"

[[example]]
name = "init_static_lut"
path = "examples/init_static_lut.rs"

[[example]]
name = "ironclad_example"
path = "examples/ironclad_example.rs"
